public/css/sass/review_improved.scss
/* ... */
section.reviewImproved.opened .outersource .copy {
    display: none;
}

section.reviewImproved.opened .textarea-container {
    width: 100%;
    padding: 0 4px;
    font-size:18px;
}

body.sampling-enabled section.reviewImproved.opened .edit-distance {
    display: block;
}

section.reviewImproved .errorTaggingArea {
    padding: 3px;
    line-height: 27px;
    padding: 4px 0 0 0 ;
}

section.reviewImproved.opened {
    .errorTaggingArea, .editableTarget, .trackChanges {
        font-family: "calibri", Arial, Helvetica, sans-serif;
        padding: 3px;
        line-height: 27px;
        padding: 4px 0 0 0 ;
    }

    .errorTaggingArea {
        .highlight {
            background-color: #7EB30C;
        }
    }

    .errorTaggingArea::selection {
        background-color: #FFFF00;
    }
}

span.review-issue-label:hover {
    cursor: help;
}

.review-version-wrapper .muted-text-box::selection {
    background-color: #FFFF00;
}

section.reviewImproved.opened.reverted {
    .errorTaggingArea::selection {
        background-color: #FFFF00;
    }
}

section.opened {
    .issuesHighlightArea::selection {
        background-color: #FFFF00;
    }
}

section.reviewImproved .textarea-container .tab-content.errorTaggingArea {
    display: block;
}

section.reviewImproved .textarea-container {
    margin: 0 0 20px 0;
}

section.reviewImproved .textarea-container .tabs-menu {
    display:none;
}

section.reviewImproved .textarea-container {
    .tab-content {
        display: none ;
    }

}

section.reviewImproved.opened .textarea-container {

    .tabs-menu {
        display: inline ;
        font-size: 12px;
    }

    .tabs-menu a {
        float: left;
    }

    .tabs-menu {
        float: left;
        clear: both;
    }

    .tabs-menu li {
        float: left;
        margin-right: 10px;
        background-color: #efefef;
        border-bottom: 1px solid #d4d4d1;
        border-right: 1px solid #d4d4d1;
        border-left: 1px solid #d4d4d1;
    }

    .tabs-menu li.current {
        position: relative;
        background-color: #fff;
        border-top: 1px solid #fff;
        z-index: 5;
        margin-top: -1px;
    }

    .tabs-menu li a {
        padding: 2px;

        color: #555;
        text-decoration: none;
    }

    .tabs-menu .current a {
        color: #2e7da3;
    }

    .tab {
        border: 1px solid #d4d4d1;
        float: left;
        width: 100%;
        padding: 0 4px;
    }

}

.fx {
    position:relative;
}

.fx:after {
      position: absolute;
    content: "";
    width: 9px;
    right: 0;
    top: 0;
    height: 29px;
    background: 
    repeating-linear-gradient( 135deg, transparent, transparent 11px, #fff 10px, #fff 18px ), 
    linear-gradient( to bottom, #7cc576, #7cc576  )
}

.rb {
    position:relative;
}

.rb:after {
      position: absolute;
    content: "";
    width: 9px;
    right: 0;
    top: 0;
    height: 29px;
    background: 
    repeating-linear-gradient( 135deg, transparent, transparent 11px, #fff 10px, #fff 18px ), 
    linear-gradient( to bottom, #dc2e34, #dc2e34  )
}

section.status-fixed .status {
    background: #7cc576 url(../img/stripes.png) repeat !important;
        background-size: 200% !important;
}

section.status-rebutted .status {
    background: #dc2e34 url(../img/stripes.png) repeat !important;
        background-size: 200% !important;
}

section.status-rebutted .status {
    background: #D300FF;
}

section {

    .buttons {
        .button {
            padding: 8px 18px;
            border-radius: 2px;
            border-radius: 2px;
            font-weight: bold;
            font-size: 18px;
            color: #fff;
            text-transform: uppercase;
            margin: 0 0 0 10px;
        }

        .button-default {
            border:1px solid #848689;
            background: #d0d1d1 ;
        }

        .status-rebutted {
            background: $rejected-color ;
            border:1px solid #848689;
        }

        .status-fixed {
            background: $approved-color;
            border:1px solid #848689;

            &[disabled] {
                background: $disabled-color;
                border: 1px solid $disabled-border-color;
                cursor: default;
            }
        }
    }

}

#review-side-panel {
    background-color: #fff;
    height: 100%;
    position: fixed;
    top: 0;
    right: 0;
    width: 22%;
    z-index: 999;
    min-width:215px;
    margin-top: 49px;
    text-align: left ;
    overflow: scroll; 

    .muted-text-box {
        padding: 4px;
        width: 96%;
        background: #efefef;
        border-bottom: 1px solid #ccc;
        outline: 0;
        font-size: 1em;
        color: #000;
        margin: 10px 0;
        border: 1px solid #727272;
        box-shadow: 0 1px 2px #ccc;
        -webkit-box-shadow: 0 1px 2px #ccc;
        word-break: normal;
    }

}

.review-issues-overview-panel {
    margin: 25px;
    margin-top: 40px;
}

.review-current-version-container {
    margin-bottom: 10px;
    border-bottom: 1px solid #ccc;
    padding-bottom: 10px;
}

.review-issue-comment-buttons-right {
   text-align: right ;
}

.review-issue-comment-reply textarea {
    width: 95%;
    margin: 10px 0;
}

.review-previous-versions-wrapper {
    .review-version-header {
    }
    position: fixed;
    margin-bottom: 40px;
    bottom: 0;
}

.review-side-panel-close {
  font-size: 13px;
  position: absolute;
  top: 10px;
  left: 10px;
  line-height: 16px;
  background-color: #333;
  color: #ffffff;
  border-radius: 50%;
  width: 18px;
  height: 18px;
  font-weight: bold;
  text-align: center;
  cursor: pointer;
  &:hover {
    background-color: #666;
  }
}
/*
.review-version-wrapper .collapsed .collapsable {
    display: none; 
}
/* ... */

